byobu (5.88) unreleased; urgency=medium

  [ Ruben Laguna ]
  * usr/share/byobu/keybindings/f-keys.tmux:
    - The previous binding will not work with shells that don't allow
      variables as commands (fish shell being one of those)
    - Use `sh -c` to explicitly use a POSIX shell to interpret the command

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 30 Sep 2014 08:38:40 -0500

byobu (5.87-0ubuntu1) utopic; urgency=medium

  [ Fazle AREFIN ]
  * usr/share/byobu/keybindings/f-keys.tmux,
    usr/share/byobu/keybindings/f-keys.tmux.disable,
    usr/share/doc/byobu/help.tmux.txt: LP: #1375794
    - enable toggling of sending input to all splits

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 30 Sep 2014 08:38:35 -0500

byobu (5.86-0ubuntu1) utopic; urgency=medium

  * usr/bin/byobu.in:
    - bikeshed scripts broke and quit incrementing the version number,
      when I moved byobu to byobu.in

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 14 Aug 2014 00:34:44 -0500

byobu (5.85-0ubuntu1) utopic; urgency=medium

  [ Pedro Romano ]
  * usr/lib/byobu/include/select-session.py:
    - This branch adds named sessions starting with an underscore also as
      hidden sessions in alternative to named sessions starting with a dot,
      since tmux doesn't support session names starting with a dot. In the
      process it also adds support for hidden session in tmux if the
      session names start with an underscore, adding this feature to tmux
      based byobu.

  [ Srdjan Grubor ]
  * usr/bin/byobu-layout.in:
    - add a list-layouts command

  [ Dustin Kirkland ]
  * usr/bin/byobu.in, usr/share/man/man1/byobu.1: LP: #907363
    - fix custom window support for byobu-tmux

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 05 Aug 2014 23:21:29 +0200

byobu (5.84-0ubuntu1) utopic; urgency=medium

  * usr/lib/byobu/include/dirs.in:
    - make the custom scripts bin dir
  * usr/lib/byobu/custom:
    - ensure we clear the cache for custom scripts
  * usr/bin/byobu-status.in: